fix Projects section layout not displaying correctly on mobile devices

--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -34,26 +34,26 @@
     grid-template-columns: repeat(4, 1fr);
     max-width: fit-content;
     gap: 3rem;
+
+    /* For the first card */
+    :nth-child(1) {
+      grid-column: 1 / span 2;
+      grid-row: 1;
+    }
+
+    /* For the second card */
+    :nth-child(3) {
+      /* considering both ProjectCard and the divider for indexing */
+      grid-column: 3 / span 2;
+      grid-row: 1;
+    }
+
+    /* For the third card */
+    :nth-child(5) {
+      grid-column: 2 / span 2;
+      grid-row: 2;
+    }
   }
-}
-
-/* For the first card */
-.projectGrid > :nth-child(1) {
-  grid-column: 1 / span 2;
-  grid-row: 1;
-}
-
-/* For the second card */
-.projectGrid > :nth-child(3) {
-  /* considering both ProjectCard and the divider for indexing */
-  grid-column: 3 / span 2;
-  grid-row: 1;
-}
-
-/* For the third card */
-.projectGrid > :nth-child(5) {
-  grid-column: 2 / span 2;
-  grid-row: 2;
 }
 
 .divider {
